# natrl-remote

./: .gitignore  .gitmodules  CONTEXT.md  docker-compose.yml  start.sh
.github/workflows/: build-apk.yml
app/: App.tsx  app.json  package-lock.json  package.json  serve-https.js
app/android/: .gitignore  settings.gradle
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/cpp/: CMakeLists.txt  android_ir_send.cpp  android_ir_send.h  jni_bridge.c  jni_encoder.cpp  natrl_ir.c  natrl_ir.h
app/android/app/src/main/cpp/arduino_stub/: Arduino.h  esp8266_peri.h  gpio.h  user_interface.h
app/android/app/src/main/java/com/anonymous/natrlremote/: MainActivity.kt  MainApplication.kt
app/android/app/src/main/java/com/anonymous/natrlremote/ir/: InfraredEmitterModule.kt  InfraredEmitterPackage.kt  InfraredEncoderModule.kt
app/android/app/src/main/java/com/anonymous/natrlremote/voice/: VoiceRecognitionModule.kt  VoiceRecognitionPackage.kt
app/android/app/src/main/res/values/: strings.xml
app/android/gradle/wrapper/: gradle-wrapper.properties
app/src/: types.ts
app/src/screens/: HomeScreen.tsx  SetupScreen.tsx
app/src/services/: api.ts  ir-emitter.ts
backend/: Dockerfile  package-lock.json  package.json
backend/db/: 03_add_tv_brands.sql  init.sql
backend/irext_encode/: bin_loader.py  irext_binding.py  server.py
backend/src/: brand-db.ts  config.ts  device-registry.ts  ir-engine-client.ts  irext-engine.ts  mqtt-client.ts  nlp.ts  server.ts  session-store.ts  tools.ts  types.ts
backend/src/routes/: control.ts  devices.ts
backend/tests/: control.test.ts  devices.test.ts  nlp.test.ts
docs/superpowers/plans/: 2026-07-09-irext-integration.md
docs/superpowers/specs/: 2026-07-09-irext-integration-design.md
firmware/: platformio.ini
firmware/src/: main.cpp
irext-data/: README.md
tests/e2e/: flow.test.ts
waveform-engine/: Dockerfile  code_db.py  requirements.txt  server.py  waveform.py
